@@ -21,6 +21,7 @@
             Bangle.js 2: Idle power consumption down from 1.3mA to 0.9mA (pullups on HRM disabled when off)
             Bangle.js 2: Increase reported bit depth from 3->16 and perform bayer dithering when rendering
               Makes icons/old apps way more usable (plus provides an easy way to get >3bpp)
+            Bangle.js: Fix color palette when rendering 3bpp -> 16bpp
 
      2v10 : Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
             Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
